--- a/css/styles.css
+++ b/css/styles.css
@@ -29,12 +29,10 @@ img {
   padding: 0 15px;
 }
 
-.background {
-  background-color: #e7e9fc;
-}
-
 .header {
   height: 72px;
+  background-color: #e7e9fc;
+  border-bottom: 1px solid #e7e9fc;
 }
 
 .header-container {
