--- a/css/styles.css
+++ b/css/styles.css
@@ -32,7 +32,7 @@ img {
 .header {
   height: 72px;
   background-color: #e7e9fc;
-  border-bottom: 1px solid #E7E9FC;
+  border-bottom: 1px solid #e7e9fc;
 }
 
 .header-container {
@@ -70,38 +70,31 @@ img {
   font-size: 16px;
   line-height: 1.5;
   letter-spacing: 0.02em;
+  padding: 24px 0;
 }
 
-.listmenu li a:hover{
-    color: var(--OCEAN);
+.listmenu li a:hover {
+  color: var(--OCEAN);
 }
 
-
-.address{
-    margin-top: 24px;
-    margin-left: auto;
-
+.address {
+  margin-top: 24px;
+  margin-left: auto;
 }
 
-.address .header-address{
-    display: flex;
-    gap: 40px;
+.address .header-address {
+  display: flex;
+  gap: 40px;
 }
 
-.address ul li a{
-    font-weight: 400;
-    color: var(--NAVY-BLUE);
-    font-style: normal;
-    line-height: 1.5;
-    letter-spacing: 0.02em;
-
+.address ul li a {
+  font-weight: 400;
+  color: var(--NAVY-BLUE);
+  font-style: normal;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 
-
-.address ul li a:hover{
-    color: var(--OCEAN);
+.address ul li a:hover {
+  color: var(--OCEAN);
 }
-
-
-
-
