--- a/css/styles.css
+++ b/css/styles.css
@@ -109,7 +109,7 @@ img {
   justify-content: center;
 }
 
-.text-h1 {
+.text-effective {
   max-width: 496px;
   font-weight: 700;
   font-size: 56px;
