--- a/css/styles.css
+++ b/css/styles.css
@@ -170,7 +170,7 @@ img {
   color: var(--NAVY-BLUE);
 }
 
-.text-textbox p{
+.text-textbox p {
   font-weight: 400;
   font-size: 16px;
   line-height: 1.5;
@@ -181,4 +181,9 @@ img {
 .text-textbox {
   width: calc((100%-72px) / 4);
 }
+
+.ourteam-container{
+  
+}
+
 
