--- a/css/styles.css
+++ b/css/styles.css
@@ -183,7 +183,28 @@ img {
 }
 
 .ourteam-container{
-  
+  background-color: var(--CLOUD);
+  padding: 120px 0;
+}
+
+.container-hero-ourteam{
+  text-align: center;
+}
+
+.container-hero-ourteam .our-team{
+  margin-bottom: 72px;
+}
+
+.img-hero{
+  display: flex;
+  gap: 24px;
+}
+
+.img-info {
+  text-align: center;
+  width: calc((100% - 72px) / 4);
+  border-radius: 0px 0px 4px 4px;
+  background-color: var(--WHİTE);
 }
 
 
