--- a/css/styles.css
+++ b/css/styles.css
@@ -182,20 +182,20 @@ img {
   width: calc((100%-72px) / 4);
 }
 
-.ourteam-container{
+.ourteam-container {
   background-color: var(--CLOUD);
   padding: 120px 0;
 }
 
-.container-hero-ourteam{
+.container-hero-ourteam {
   text-align: center;
 }
 
-.container-hero-ourteam .our-team{
+.container-hero-ourteam .our-team {
   margin-bottom: 72px;
 }
 
-.img-hero{
+.img-hero {
   display: flex;
   gap: 24px;
 }
@@ -207,5 +207,18 @@ img {
   background-color: var(--WHİTE);
 }
 
-
-
+.personal-name-info {
+  margin-bottom: 8px;
+  color: var(--NAVY-BLUE);
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+}
+.personal-name-feature {
+  color: var(--SLATE);
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
